message(STATUS "Add FetchContent")
include(FetchContent)

message(STATUS "Fetching external libraries started")
add_subdirectory(api)
add_subdirectory(aselib)
add_subdirectory(openalpp)
add_subdirectory(tileson)
add_subdirectory(box2d)
add_subdirectory(imgui)
if (USE_SFML)
    add_subdirectory(sfml)
    add_subdirectory(imgui-sfml)
else ()
    if (WIN32)
        add_subdirectory(sdl2)
        add_subdirectory(sdl2_image)
        add_subdirectory(sdl2_ttf)
    endif ()
    add_subdirectory(imgui-sdl)
endif ()

message(STATUS "Fetching external libraries done")
